syntax = "proto3";

package fonoster.routr.processor.v2draft1;

option java_multiple_files = true;
option java_package = "io.routr.processor";
option java_outer_classname = "ProcessorProto";
option objc_class_prefix = "PR";

import "common.proto";
import "sipmessage.proto";

// Processor service
service Processor {
  // Process Message Request
  rpc ProcessMessage (MessageRequest) returns (MessageResponse) {}
}

enum Method {
  UNKNOWN = 0;
  REGISTER = 1;
  INVITE = 2;
  MESSAGE = 3;
  PUBLISH = 4;
  NOTIFY = 5;
  SUBSCRIBE = 6;
}

message NetInterface {
  string host = 1;
  int32 port = 2;
  fonoster.routr.common.v2draft1.Transport transport = 3;
}

message MessageRequest {
  // Same as the Call-Id header 
  string ref = 1;
  string edgePortRef = 2;
  Method method = 3;
  NetInterface sender = 4;
  repeated NetInterface external_addrs = 5;
  repeated string localnets = 6;
  fonoster.routr.sipmessage.v2draft1.SIPMessage message = 7;
  // .google.protobuf.Struct metadata = 8;
}

message MessageResponse {
  fonoster.routr.sipmessage.v2draft1.SIPMessage message = 1;
}
