/*
 * Copyright (C) 2021 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/routr
 *
 * This file is part of Routr
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package routr.processor.v2alpha1;

service Processor {
  rpc ProcessRequest (RouteReqRequest) returns (RouteReqResponse) {};
  rpc ProcessResponse (RouteResRequest) returns (RouteResResponse) {};
  rpc ProcessTimeout (ProcessTimeoutRequest) returns (ProcessTimeoutResponse) {};
  rpc ProcessTransactionTerminated (ProcessTransTermRequest) returns (ProcessTransTermResponse) {};
  rpc ProcessDialogTerminated (ProcessDialogTermRequest) returns (ProcessDialogTermResponse) {};
}

message RouteReqRequest { }
message RouteReqResponse { }
message RouteResRequest { }
message RouteResResponse { }
message ProcessTimeoutRequest { }
message ProcessTimeoutResponse { }
message ProcessTransTermRequest { }
message ProcessTransTermResponse { }
message ProcessDialogTermRequest { }
message ProcessDialogTermResponse { }